--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -4,4 +4,4 @@
     <h4 class="text-center text col-5 py-4">Season: {{ table.season }}</h4>
   </div>
 </div>
-<app-item [teams]="table.standings"></app-item>
+<app-item></app-item>
