--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,8 @@
 .footer-container {
   height: 45px;
-  margin-top: -45px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   align-content: center;
   background-color: black;
 }
