--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,5 +1,8 @@
+.component {
+  margin-top: 60px;
+}
 .text {
-  font-family:'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 @media (max-width: 880px) {
   .text {
